Added files structure and landing page styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+  <section class="hero-image">
+    <div class="box-title">
+      <h1>leftover</h1>
+      <h4>coming soon</h4>
+    </div>
+  </section>
 </body>
 
 </html>
